--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section class="hero">
             <div class="container">
                 <h2>課題解決を楽しむエンジニア</h2>
-                <p>田口 〇〇</p>
-                <p class="hero-subtext">Webの力で人々の毎日を少しでも豊かにすることを目指しています。</p>
+                <p>田口 昂樹</p>
+                <p class="hero-subtext">今Web プログラミングの授業を受けています</p>
             </div>
         </section>
 
@@ -35,9 +35,9 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="profile">
                     <p>
-                        ここに自己紹介文を記述します。これまでの経歴や、エンジニアを目指したきっかけなどを書きましょう。<br>
-                        どのような技術に興味があり、今後どのように活躍していきたいかを具体的に書くことで、あなたの人柄や熱意が伝わります。<br>
-                        例えば、チーム開発での経験や、問題解決の際に工夫したエピソードなどを盛り込むと良いでしょう。
+                        慶應義塾大学４年<br>
+                        Computer Scienceについて勉強しています<br>
+                        
                     </p>
                 </div>
             </div>
